Mobile Footer Fixes
Fixed overlapping text in mobile footer

--- a/header.css
+++ b/header.css
@@ -114,6 +114,8 @@
     width: 100%;
     display: grid;
     margin-top: 2vw;
+    grid-template-areas: none;
+    grid-template-rows: 1fr;
     grid-template-columns: 0.1fr 1fr 1fr 1fr 0.1fr;
 }
 
@@ -136,6 +138,25 @@
 }
 
 @media screen and (max-width: 1100px) {
+    .footer {
+        grid-template-columns: 0.1fr 1fr 0.1fr 1fr 0.1fr;
+        grid-template-rows: 1fr 0.5fr 1fr;
+        grid-template-areas: 
+        ". support . lordimass ."
+        ". . . . ."
+        ". license license license .";
+    }
+
+    .left-footer-el {
+        grid-area: support;
+    }
+    .middle-footer-el {
+        grid-area: license;
+    }
+    .right-footer-el {
+        grid-area: lordimass;
+    }
+
     .logo h1 {
         display: none;
     }
